<resources>
    <string name="app_name">ACETAT</string>

    <!--Main Activity-->
    <string name="str_welcome_text">Welcome to ACETAT</string>
    <string name="str_enter_user_name">Enter the UserName</string>
    <string name="str_password">Enter Password</string>
    <string name="str_login">Login</string>
    <string name="str_fab_four">THE FAB FOUR</string>

    <!-- Class Attendance Activity -->
    <string name="str_month">Monthly Attendance</string>

    <!-- AttendanceMarking activity -->
    <string name="str_mark">Mark the Attendance</string>
    <string name="str_edit">Edited By:</string>
    <string name="str_update">Update Attendance</string>
    <string name="str_absent">Absentees</string>
    <string name="str_no_absent">No absentees today!</string>

    <!-- Menu -->
    <string name="str_attendance">Attendance</string>
    <string name="str_log">Log</string>
    <string name="str_export">Export</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>